Bug 77716 - FILESAVE: Paragraph spacing is not preserved after RT
Summary: FILESAVE: Paragraph spacing is not preserved after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-21 08:10 UTC by Tushar Bende
Modified: 2018-04-11 17:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (355.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 08:10 UTC, Tushar Bende
Details
File 2 for which this issue can be reproduced (129.85 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 08:13 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-04-21 08:10:45 UTC
Created attachment 97671 [details]
File for which this issue can be reproduced

Problem description: Paragraph spacing is not preserved after RT

Steps to reproduce:
1] Open attached file in LO
2] Perform save_as
3] Open saved file in MS Office 2010

Current behavior :
Paragraph spacing is not preserved.

Expected behavior :
Paragraph spacing should get preserved after RT.

[Checked in LibreOffice 4.2 : Observed same behaviour]


Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Tushar Bende 2014-04-21 08:13:50 UTC
Created attachment 97672 [details]
File 2 for which this issue can be reproduced
Comment 2 Miklos Vajna 2014-10-16 08:07:59 UTC
sw/inc/SwStyleNameMapper.hxx says that a user-defined "Standard" style should have a " (user)" suffix set by the importer, doing that in writerfilter should fix the problem.