fdo#77716 : Paragraph spacing is not preserved after RT.

For some MS word documents having specific combination of styles in style.xml ,During import there
was a overriding of Style properties by some other style for which LO uses same style name.
This was the reason for the paragraph spacing and font size change during import and even after RT.

for eg. : for MS word docx having styles "Normal" & "Standard", During import LO returns "Standard"
for both the style and hence MS word's Normal style values gets overridden by Standard style values.

So checking if style name is there in m_aStyleNameMap keys in ConvertStyleName() , if it is not there then searching for it in  values of m_aStyleNameMap
if found then append "LO" to the style name so that it will not change values of other style for which LO uses same name.

Change-Id: I68b3c9e5fbd24ecaa75aa39f933144a9ff67d684